# stock_agent

./: .env.sample  README.md  pyproject.toml
src/stock_agent/: crew.py  main.py
src/stock_agent/tools/: calculator_tool.py
