[tool.poetry]
name = "stock-agent"
version = "0.1.0"
description = ""
authors = ["Vinicius Abreu <vabreu@testreach.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.86.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
