[tool.poetry]
name = "stock-agent"
version = "0.1.0"
description = ""
authors = ["Vinicius Abreu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.85.0" }
crewai-tools = "^0.4.6"
pip = "^24.1.1"
install = "^1.3.5"

[tool.poetry.scripts]
stock_agent = "stock_agent.main:run"
run_crew = "stock_agent.main:run"
train = "stock_agent.main:train"
replay = "stock_agent.main:replay"
test = "stock_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
